2022-02-09  Nick Clifton  <nickc@redhat.com>

	2.38 release.
	* development.sh (development): Set to false.
	(experimental): Set to false.
	* version.m4 (BFD_VERSION): Set to 2.38.
	* Makefile.in: Regenerate.
	* configure: Regenerate.
	* doc/Makefile.in: Regenerate.
	* bfd/po/bfd.pot: Tegenerate.

2022-02-02  Nick Clifton  <nickc@redhat.com>

	PR 28834
	* dwarf2.c (read_section): Change the heuristic that checks for
	overlarge dwarf debug info sections.

2022-01-24  Nick Clifton  <nickc@redhat.com>

	* po/fr.po: Updated French translation.
	* po/ro.po: Updated Romanian translation.
	* po/uk.po: Updated Ukranian translation.

2022-01-22  Nick Clifton  <nickc@redhat.com>

	* version.m4: Update to 2.37.90.
	* configure: Regenerate.
	* po/bfd.pot: Regenerate.

2022-01-22  Nick Clifton  <nickc@redhat.com>

	* 2.38 release branch created.

2022-01-17  Nick Clifton  <nickc@redhat.com>

	* Makefile.in: Regenerate.
	* configure: Regenerate.
	* doc/Makefile.in: Regenerate.
	* po/bfd.pot: Regenerate.

2021-12-15  Nikita Popov  <npv1310@gmail.com>

	PR 28687
	* dwarf1.c (parse_die): Fix undefined behaviour in range tests.

2021-11-17  Nick Clifton  <nickc@redhat.com>

	PR 28452
	* elf.c (assign_file_positions_for_non_load_sections): Replace
	assertion with a warning message.

2021-10-19  Nick Clifton  <nickc@redhat.com>

	* linker.c (_bfd_generic_link_add_one_symbol): Test for a NULL
	name before checking to see if the symbol is __gnu_lto_slim.
	* archive.c (_bfd_compute_and_write_armap): Likewise.

2021-09-27  Nick Alcock  <nick.alcock@oracle.com>

	* configure: Regenerate.

2021-09-15  Andrew Burgess  <andrew.burgess@embecosm.com>

	* archures.c (bfd_arch_list): Use 'char *' instead of 'char **'
	when calculating space for a string list.

2021-09-014  Cupertino Miranda  <cmiranda@synopsys.com>
           Claudiu Zissulescu  <claziss@synopsys.com>

	* arc-got.h (arc_static_sym_data): New structure.
	(get_static_sym_data): New function.